--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 
   <body>
-    <section class="full"> <p>Hi, my name is Randy. </br> I’m an Interaction designer passionate about coding and creating experiences.</p> </section>
-    <section class="banner">
-      <div class="banner3d-1">
-        <div class="banner3d-1-front">
-          I'm an Interaction Designer looking for new challenges
+    <section class="full sky-gradient sky-gradient-04"> <p>Hi, my name is Randy. </br> I’m an Interaction designer passionate about coding and creating experiences.</p> </section>
+    <section class="banner sky-gradient sky-gradient-04">
+      <div class="banner3d-1 ">
+        <div class="banner3d-1-front sky-gradient sky-gradient-04">
+          <p>I'm looking for new challenges</p>
         </div>
       </div>
     </section>
