--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
       </div>
     </section>
 
-    <section class="half">I love solving problems</section>
+    <section class="half"><p>I love solving problems</p></section>
 
     <section class="banner">
       <div class="banner3d-2">
         <div class="banner3d-2-front">
-          by looking underneath the surface
+          <p>by looking underneath the surface</p>
         </div>
       </div>
     </section>
@@ -33,7 +33,7 @@
     <section class="banner">
       <div class="banner3d-3">
         <div class="banner3d-3-front">
-          and<br>find different<br>perspectives
+          <p>and<br>find different<br>perspectives</p>
         </div>
       </div>
       <div class="image"></div>
