--- a/index.html
+++ b/index.html
@@ -1,57 +1,153 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-  	<link rel="stylesheet"  type="text/css" href="main.css">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>randy.ch/en</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/ScrollTrigger.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Comfortaa:700" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="index.css">
+</head>
+<body>
+    <div id="loading">
+        <div id="spinner"></div>
+    </div>
+    <div id="particles-js"></div>
+    <div id="box">
+        <div class="box1 onlywide animated bounceOutLeft" style="animation-delay:1.7s;"></div>
+        <div class="box2 onlywide animated bounceOutLeft" style="animation-delay:1.8s;"></div>
+        <div class="box2 onlywide animated bounceOutLeft" style="animation-delay:1.9s;"></div>
+        <div class="box2 animated bounceOutRight" style="animation-delay:1.9s;"></div>
+        <div class="box2 onlywide animated bounceOutRight" style="animation-delay:1.8s;"></div>
+        <div class="box2 onlywide animated bounceOutRight" style="animation-delay:1.7s;"></div>
+    </div>
+    <a id="about" onclick="showabout()" class="animated fadeIn" style="animation-delay:2.2s;">about</a>
+    <a id="work" onclick="showwork()" class="animated fadeIn" style="animation-delay:2.2s;">work</a>
+    <a id="contact" onclick="showcontact()" class="animated fadeIn" style="animation-delay:2.2s;">contact</a>
+    <div id="middle" class="animated slideInDown" style="animation-delay:2.0s;">
+        <h1 class="typewrite" data-period="2000" data-type='[ "atty", "en", "inese", "arismatic", "ill", "eeselover"]'></h1>
 
-  </head>
-
-
-  <body>
-    <section class="full sky-gradient sky-gradient-04"> <p>Hi, my name is Randy. </br> I’m an Interaction designer passionate about coding and creating experiences.</p> </section>
-    <section class="banner sky-gradient sky-gradient-04">
-      <div class="banner3d-1 ">
-        <div class="banner3d-1-front sky-gradient sky-gradient-04">
-          <p>I'm looking for new challenges</p>
+        <h2>Interaction Designer / Front-End Developer / Human</h2>
+        <div id="menu">
+            <a onclick="showabout()">about</a>
+            <a onclick="showwork()">work</a>
+            <a onclick="showcontact()">contact</a>
         </div>
-      </div>
-    </section>
+        <table>
+                <tr>
+                    <td class="animated zoomIn" style="animation-delay:2.2s;"><a href="https://www.linkedin.com/in/randythechen" target="_blank" class="social"><i class="fab fa-linkedin"></i></a></td>
+                    <td class="animated zoomIn" style="animation-delay:2.4s;"><a href="https://www.instagram.com/dechines/" target="_blank" class="social"><i class="fab fa-instagram"></i></a></td>
+                    <td class="animated zoomIn" style="animation-delay:2.6s;"><a href="mailto:randychen3@hotmail.com" target="_blank" class="social"><i class="fas fa-envelope"></i></a></td>
+                    <!-- <td class="animated zoomIn" style="animation-delay:2.8s;"><a class="social"><i class="fab fa-dribbble"></i></a></td> -->
+                </tr>
+        </table>
+    </div>
+    <div id="work_container" class="container">
+        <div onclick="closework()"><i class="fas fa-angle-right"></i></div>
+        <h1>works.</h1>
+        <section>
+            <h2>BA Project - Journey to Recovery</h2>
+            <h3>Team:</h3>
+            <p>Claudia Buck</p>
+            <h3>Description:</h3>
+            <p>Journey to Recovery is a companion app for a sleeptreatment aimed at children from the age of 8-12 Year olds.
+              Together with an research team from the ETH Zürich and the University of Zürich called SleeplLoop we investigated the issues of adherence and motivation in the context of mHealth devices.
+              </p>
+              <h3>Awarded:</h3>
+            <p>Förderpreis ZHdK, Swiss Design Assciation (SDA)</p>
+            <h3>Links:</h3>
+            <p><a href="http://journey-to-recovery.ch">journey-to-recovery.ch</a></p>
+            <h3>Skills:</h3>
+            <div id="used">
+                <div><i class="fas fa-plus-circle"></i>&nbsp;Unity</div>
+                <div><i class="fas fa-plus-circle"></i>&nbsp;Illustration</div>
+                <div><i class="fas fa-plus-circle"></i>&nbsp;Figma</div>
+                <div><i class="fas fa-plus-circle"></i>&nbsp;HTML</div>
+                <div><i class="fas fa-plus-circle"></i>&nbsp;CSS</div>
+            </div>
+        </section>
+        <section>
 
-    <section class="half"><p>I love solving problems</p></section>
-
-    <section class="banner">
-      <div class="banner3d-2">
-        <div class="banner3d-2-front">
-          <p>by looking underneath the surface</p>
+        </section>
+        <section>
+            <h2>work title</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <div id="used">
+                <div><i class="fas fa-circle"></i>&nbsp;HTML5</div>
+                <div><i class="fas fa-circle"></i>&nbsp;CSS3</div>
+                <div><i class="fas fa-circle"></i>&nbsp;Javascript</div>
+            </div>
+            <button class="btn_one">button 1</button>
+            <button class="btn_two">button 2</button>
+        </section>
+        <section>
+            <h2>work title</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <div id="used">
+                <div><i class="fas fa-circle"></i>&nbsp;HTML5</div>
+                <div><i class="fas fa-circle"></i>&nbsp;CSS3</div>
+                <div><i class="fas fa-circle"></i>&nbsp;Javascript</div>
+            </div>
+            <button class="btn_one">button 1</button>
+            <button class="btn_two">button 2</button>
+        </section>
+        <section>
+            <h2>work title</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <div id="used">
+                <div><i class="fas fa-circle"></i>&nbsp;HTML5</div>
+                <div><i class="fas fa-circle"></i>&nbsp;CSS3</div>
+                <div><i class="fas fa-circle"></i>&nbsp;Javascript</div>
+            </div>
+            <button class="btn_one">button 1</button>
+            <button class="btn_two">button 2</button>
+        </section>
+    </div>
+    <div id="about_container" class="container">
+            <div onclick="closeabout()"><i class="fas fa-angle-left"></i></div>
+            <h1>about.</h1>
+            <section>
+                <h2>I love to discover new ways to make things better.</h2>
+                <p>Hi, my name is Randy Chen and I'm an Interaction Designer from Zürich. I love coding and creating digital space and solutions to existing problems. In my design process I love to involve the User and every person who is going to be affected.
+                  My strongest skills to accomplish my goal are pragmatic and quick prototyping - physical as well as digital prototyps.
+                </p>
+                <p>I thrive on learning new things and finding new ways to use engaging technologies.</p>
+            </section>
+            <section>
+                <h2>skills</h2>
+                <p>
+                    i do eveything ;)
+                </p>
+            </section>
         </div>
-      </div>
-    </section>
-    <section class="mini"></section>
-    <section class="banner">
-      <div class="banner3d-3">
-        <div class="banner3d-3-front">
-          <p>and<br>find different<br>perspectives</p>
+          <div id="contact_container" class="container">
+            <div onclick="closecontact()"><i class="fas fa-angle-down"></i></div>
+            <h1>contact.</h1>
+            <section>
+                <h2>contact me</h2>
+                <p>
+                    <form>
+                        <input type="text" placeholder="name" required>
+                        <input type="email" placeholder="email" required><br>
+                        <textarea placeholder="your message" required rows="5"></textarea><br>
+                        <button class="btn_one">send</button>
+                    </form>
+                </p>
+            </section>
         </div>
-      </div>
-      <div class="image"></div>
-    </section>
 
-    <section class="half"></section>
-
-    <section class="banner">
-      <div class="image2"></div>
-      <div class="banner3d-4">
-
-        <div class="banner3d-4-front">
-          To go into details
-        </div>
-      </div>
-    </section>
-
-    <section class="full"></section>
-    <script src="script.js"></script>
-  </body>
+    <script src="index.js" type="text/javascript"></script>
+    <script src="particles.js"></script>
+    <script src="typewrite.js"></script>
+    <script src="app.js"></script>
+</body>
 </html>
