--- a/index.html
+++ b/index.html
@@ -70,8 +70,11 @@
             </div>
         </section>
         <section>
+          <div class="gallery filtered">
+            <img src="j2r.jpg" class="" alt="">
 
-        </section>
+          </div>
+          </section>
         <section>
             <h2>work title</h2>
             <p>
