--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
             <h3>Team:</h3>
             <p>Claudia Buck</p>
             <h3>Description:</h3>
-            <p>Journey to Recovery is a companion app for a sleeptreatment aimed at children from the age of 8-12 Year olds.
-              Together with an research team from the ETH Zürich and the University of Zürich called SleeplLoop we investigated the issues of adherence and motivation in the context of mHealth devices.
+            <p>Journey to Recovery is a companion app creted for a sleeptreatment aimed at children from the age of 8-12 Year olds.
+              Together with an research team from the ETH Zürich and the University of Zürich called <a href="https://sleeploop.ch" target="_blank">SleeplLoop</a> we investigated the issues of adherence and motivation in the context of mHealth devices.
               </p>
               <h3>Awarded:</h3>
             <p>Förderpreis ZHdK, Swiss Design Assciation (SDA)</p>
@@ -75,7 +75,12 @@
                 <div><i class="fas fa-plus-circle"></i>&nbsp;CSS</div>
             </div>
         </section>
+        <section>
+          <div class="gallery filtered">
+            <img src="j2r.jpg" class="" alt="">
 
+          </div>
+          </section>
         <section>
             <h2>work title</h2>
             <p>
@@ -89,6 +94,7 @@
             <button class="btn_one">button 1</button>
             <button class="btn_two">button 2</button>
         </section>
+
         <section>
             <h2>work title</h2>
             <p>
