--- a/index.html
+++ b/index.html
@@ -48,10 +48,9 @@
     <div id="work_container" class="container">
         <div onclick="closework()"><i class="fas fa-angle-right"></i></div>
         <h1>works.</h1>
-        <section>
+        <section class="project_1">
           <div class="gallery filtered">
             <img src="j2r.jpg" class="" alt="">
-
           </div>
           </section>
         <section>
@@ -60,7 +59,7 @@
             <p>Claudia Buck</p>
             <h3>Description:</h3>
             <p>Journey to Recovery is a companion app creted for a sleeptreatment aimed at children from the age of 8-12 Year olds.
-              Together with an research team from the ETH Zürich and the University of Zürich called <a href="https://sleeploop.ch" target="_blank">SleeplLoop</a> we investigated the issues of adherence and motivation in the context of mHealth devices.
+              Together with an research team from the ETH Zürich and the University of Zürich called <a href="https://sleeploop.ch" target="_blank">SleepLoop</a> we investigated the issues of adherence and motivation in the context of mHealth devices.
               </p>
               <h3>Awarded:</h3>
             <p>Förderpreis ZHdK, Swiss Design Assciation (SDA)</p>
@@ -127,8 +126,9 @@
             <h1>about.</h1>
             <section>
                 <h2>I love to discover new ways to make things better.</h2>
-                <p>Hi, my name is Randy Chen and I'm an Interaction Designer from Zürich. I love coding and creating digital space and solutions to existing problems. In my design process I love to involve the User and every person who is going to be affected.
-                  My strongest skills to accomplish my goal are pragmatic and quick prototyping - physical as well as digital prototyps.
+                <p>Hi, my name is Randy Chen and I'm an Interaction Designer from Zürich. I love creating engaging digital and physical space and solutions.
+                  I have a passion for coding, illustration, graphic design and interactive art installations.
+                  My strongest skills are pragmatic and quick prototyping to discover new perspectives of every situation.
                 </p>
                 <p>I thrive on learning new things and finding new ways to use engaging technologies.</p>
             </section>
