--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <a id="work" onclick="showwork()" class="animated fadeIn" style="animation-delay:2.2s;">work</a>
     <a id="contact" onclick="showcontact()" class="animated fadeIn" style="animation-delay:2.2s;">contact</a>
     <div id="middle" class="animated slideInDown" style="animation-delay:2.0s;">
-        <h1 class="typewrite" data-period="2000" data-type='[ "atty", "en", "inese", "arismatic", "ill", "eeselover"]'></h1>
+        <h1 class="typewrite" data-period="2000" data-type='[ "/atty", "/en", "/inese", "/arismatic", "/eeselover", "/allenger", "/arming", "/ocoholic", "/ampion", "/en"]'></h1>
 
         <h2>Interaction Designer / Front-End Developer / Human</h2>
         <div id="menu">
@@ -61,7 +61,7 @@
             <p>Journey to Recovery is a companion app creted for a sleeptreatment aimed at children from the age of 8-12 Year olds.
               Together with an research team from the ETH Zürich and the University of Zürich called <a href="https://sleeploop.ch" target="_blank">SleepLoop</a> we investigated the issues of adherence and motivation in the context of mHealth devices.
               </p>
-              <h3>Awarded:</h3>
+              <h3>Awards:</h3>
             <p>Förderpreis ZHdK, Swiss Design Assciation (SDA)</p>
             <h3>Links:</h3>
             <p><a href="http://journey-to-recovery.ch">journey-to-recovery.ch</a></p>
