--- a/index.html
+++ b/index.html
@@ -126,9 +126,10 @@
             <h1>about.</h1>
             <section>
                 <h2>I love to discover new ways to make things better.</h2>
-                <p>Hi, my name is Randy Chen and I'm an Interaction Designer from Zürich. I love creating engaging digital and physical space and solutions.
-                  I have a passion for coding, illustration, graphic design and interactive art installations.
-                  My strongest skills are pragmatic and quick prototyping to discover new perspectives of every situation.
+                <p>Hi, my name is Randy Chen and I'm an Interaction Designer who graduated in 2020 from the Zürich University of the Arts.
+                  With my affinity for technology, I specialise on blending creativity with digital solutions.
+                  This approach and interest in designing interactions and environments for the future inspires my work
+                  and has led him to be awarded with the ZHdK Förderpreis and the SDA Bachelor Award for my Bachelor project. I'm passionate about creating meaningful experiences and empowering people throught design.
                 </p>
                 <p>I thrive on learning new things and finding new ways to use engaging technologies.</p>
             </section>
