--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@
             <section>
                 <h2>I love to discover new ways to make things better.</h2>
                 <p>Hi, my name is Randy Chen and I'm an Interaction Designer who graduated in 2020 from the Zürich University of the Arts.
-                  With my affinity for technology, I specialise on blending creativity with digital solutions.
-                  This approach and interest in designing interactions and environments for the future inspires my work
-                  and has led him to be awarded with the ZHdK Förderpreis and the SDA Bachelor Award for my Bachelor project. I'm passionate about creating meaningful experiences and empowering people throught design.
+                  With my affinity for technology, I specialise on blending creativity with digital solutions. I'm passionate about creating meaningful experiences for the user by involving them in the process.
+                  This approach and interest in designing interactions and environments for the future inspired my work
+                  and has led him to be awarded with the ZHdK Förderpreis and the Swiss Design Association (SDA) Bachelor Award for my Bachelor project.
                 </p>
-                <p>I thrive on learning new things and finding new ways to use engaging technologies.</p>
+                <p>I thrive on learning new things and finding new ways to use engaging solutions and experiences.</p>
             </section>
             <section>
                 <h2>skills</h2>
