--- a/index.html
+++ b/index.html
@@ -105,9 +105,7 @@ Kiran Doshi, Franziska Eckert, Kira Erb, Lucien Erdin, Philipp Honegger, Frederi
             <h3>Description:</h3>
 
             <p>Adero was created to autonomously deliver a wide range of goods in interiors, combining state-of-the-art technology with a simple but attractive design. Our title sponsor Jelmoli, the leading premium department store in Switzerland, will put our robot into operation at Zurich Airport in 2020/21. It will deliver goods ordered from the online store to predefined pickup points throughout the airport area, providing a unique customer experience. Adero actively interacts with its environment and strives to build relationships with the people it meets along the way. It captures the attention of the audience, both through sound and light, and transmits its current state using the same audiovisual means. When Adero arrives at its destination, it shows its trustworthy and friendly character, creating a novel but intuitive interaction experience.</p>
-            <!-- <p>Journey to Recovery is a companion app creted for a sleeptreatment aimed at children from the age of 8-12 Year olds.
-              Together with an research team from the ETH Zürich and the University of Zürich called <a href="https://sleeploop.ch" target="_blank">SleepLoop</a> we investigated the issues of adherence and motivation in the context of mHealth devices.
-              </p> -->
+
               <h3>Press:</h3>
               <p><a href="https://www.wohnrevue.ch/auftakt/preisgekroente-schlaf-app/">wohnrevue.ch</a>/
               <a href="https://www.hochparterre.ch/nachrichten/design/blog/post/detail/app-ins-bett/1599034231/">hochparterre.ch</a>/
@@ -126,12 +124,17 @@ Kiran Doshi, Franziska Eckert, Kira Erb, Lucien Erdin, Philipp Honegger, Frederi
                 <div><i class="fas fa-plus-circle"></i>&nbsp;HTML/CSS</div>
             </div>
         </section>
+        <section>
+            <h2>...Work in progress - more projects to follow soon!</h2>
+
+        </section>
+
     </div>
     <div id="about_container" class="container">
             <div onclick="closeabout()" class="closeButton"><i class="fas fa-angle-left"></i></div>
             <h1>about.</h1>
             <section>
-                <h2>I love to discover new ways to make things better.</h2>
+                <h2>I love to discover new ways to improve experiences.</h2>
                 <p>Hi, my name is Randy Chen and I'm an Interaction Designer who graduated in 2020 from the Zürich University of the Arts.
                   With my affinity for technology, I specialise on blending creativity with digital solutions. I'm passionate about creating meaningful experiences for the user by involving them in the process.
                   This approach and interest in designing interactions and environments for the future inspired my work
