--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
     <div id="work_container" class="container">
         <div onclick="closework()" class="closeButton"><i class="fas fa-angle-right"></i></div>
-        <h1>works.</h1>
+        <h1>works</h1>
         <section class="project_1">
          <div class="gallery"> <!--or with filtered -->
             <img src="j2r.jpg" class="" alt="">
@@ -132,7 +132,7 @@ Kiran Doshi, Franziska Eckert, Kira Erb, Lucien Erdin, Philipp Honegger, Frederi
     </div>
     <div id="about_container" class="container">
             <div onclick="closeabout()" class="closeButton"><i class="fas fa-angle-left"></i></div>
-            <h1>about.</h1>
+            <h1>about</h1>
             <section>
                 <h2>I love to discover new ways to improve experiences.</h2>
                 <p>Hi, my name is Randy Chen and I'm an Interaction Designer who graduated in 2020 from the Zürich University of the Arts.
@@ -246,7 +246,7 @@ Kiran Doshi, Franziska Eckert, Kira Erb, Lucien Erdin, Philipp Honegger, Frederi
         </div>
           <div id="contact_container" class="container">
             <div onclick="closecontact()" class="closeButton"><i class="fas fa-angle-down"></i></div>
-            <h1>contact.</h1>
+            <h1>contact</h1>
             <section>
                 <h2>contact me</h2>
                 <p>
