--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="timeline.css">
+
 </head>
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap');
+</style>
 <body>
     <div id="loading">
         <div id="spinner"></div>
@@ -202,10 +206,11 @@ Kiran Doshi, Franziska Eckert, Kira Erb, Lucien Erdin, Philipp Honegger, Frederi
 <li>
   <div class="direction-r">
     <div class="flag-wrapper" style="width: 335px;">
-      <span class="flag">Interaction Design BA</span>
-      <span class="time-wrapper"><span class="time">2018 - 2020</span></span>
+      <span class="flag">Interaction Design</span>
+      <span class="time-wrapper"><span class="time">2017 - 2020</span></span>
     </div>
-    <div class="desc">University of the Arts Zurich (ZHdK)</div>
+    <div class="desc">Bachelor in Interacrion Design<br>
+      University of the Arts Zurich (ZHdK)</div>
   </div>
 </li>
 
