--- a/en.html
+++ b/en.html
@@ -33,7 +33,7 @@
     <a id="work" onclick="showwork()" class="animated fadeIn" style="animation-delay:2.2s;">work</a>
     <a id="contact" onclick="showcontact()" class="animated fadeIn" style="animation-delay:2.2s;">contact</a>
     <div id="middle" class="animated slideInDown" style="animation-delay:2.0s;">
-        <h1 class="typewrite" data-period="2000" data-type='[ "/atty", "/en", "/inese", "/arismatic", "/eeselover", "/allenger", "/arming", "/ocoholic", "/ampion", "/en"]'></h1>
+        <h1 class="typewrite" style="letter-spacing:-0.8px" data-period="2000" data-type='[ "/atty", "/en", "/inese", "/arismatic", "/eeselover", "/allenger", "/arming", "/ocoholic", "/ampion", "/en"]'></h1>
 
         <h2>Interaction Designer / Creative Thinker / Problem Solver</h2>
         <div id="menu">
@@ -205,7 +205,7 @@ Kiran Doshi, Franziska Eckert, Kira Erb, Lucien Erdin, Philipp Honegger, Frederi
 <!-- Item 3 -->
 <li>
   <div class="direction-r">
-    <div class="flag-wrapper" style="width: 335px;">
+    <div class="flag-wrapper" style="width: 310px;">
       <span class="flag">Interaction Design</span>
       <span class="time-wrapper"><span class="time">2017 - 2020</span></span>
     </div>
