--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ Kiran Doshi, Franziska Eckert, Kira Erb, Lucien Erdin, Philipp Honegger, Frederi
             <div onclick="closecontact()" class="closeButton"><i class="fas fa-angle-down"></i></div>
             <h1>contact</h1>
             <section>
-                <h2>contact me</h2>
+                <h2>Say Hello!</h2>
                 <p>
                     <form action="mailto:randy_chen3@hotmail.com?subject=Hey%20Randy%20lets%20talk!" method="post" enctype="text/plain"> <!--onsubmit="replacespace();" -->
 
