exhibition, awards, speaker

--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
             <h3>Description:</h3>
 
             <p>Sleep and recovery go hand in hand. With the intention of improving the quality of children’s
-sleep, a medical sleep device that requires to be worn every evening has been developed using
-sound. Despite its health benefits, the sleep therapy is often abandoned by the children as it proceeds
-due to its repetitiveness and tediousness. Journey to Recovery is a companion app that
-playfully combines the sleep therapy with a captivating story. With it, the children can
-experience a narrative chapter every evening and learn something new about sleep in the morning.
-Through collaborative efforts, all parties involved had a say in the process, thereby bringing the
-expertise of sleep researchers and the creativity of children together.</p>
+                sleep, a medical sleep device that requires to be worn every evening has been developed using
+                sound. Despite its health benefits, the sleep therapy is often abandoned by the children as it proceeds
+                due to its repetitiveness and tediousness. Journey to Recovery is a companion app that
+                playfully combines the sleep therapy with a captivating story. With it, the children can
+                experience a narrative chapter every evening and learn something new about sleep in the morning.
+                Through collaborative efforts, all parties involved had a say in the process, thereby bringing the
+                expertise of sleep researchers and the creativity of children together.</p>
             <!-- <p>Journey to Recovery is a companion app creted for a sleeptreatment aimed at children from the age of 8-12 Year olds.
               Together with an research team from the ETH Zürich and the University of Zürich called <a href="https://sleeploop.ch" target="_blank">SleepLoop</a> we investigated the issues of adherence and motivation in the context of mHealth devices.
               </p> -->
@@ -94,6 +94,7 @@ expertise of sleep researchers and the creativity of children together.</p>
                 <div><i class="fas fa-plus-circle"></i>&nbsp;HTML/CSS</div>
                 <div><i class="fas fa-plus-circle"></i>&nbsp;Miro</div>
                 <div><i class="fas fa-plus-circle"></i>&nbsp;Unity</div>
+                <div><i class="fas fa-plus-circle"></i>&nbsp;AR</div>
             </div>
         </section>
         <section class="project_2">
@@ -148,6 +149,33 @@ Kiran Doshi, Franziska Eckert, Kira Erb, Lucien Erdin, Philipp Honegger, Frederi
                 </p>
                 <p>I thrive on learning new things and finding new ways to use engaging solutions and experiences.</p>
             </section>
+            <div class="about-facts">
+              <div class="sub-about">
+                <h2>Speaker</h2>
+                <ul>
+                  <li><p>Swiss Digital Day 2020 – Challenging the Future in Arts & Design: Smart Technologies</p></li>
+                </ul>
+              </div>
+              <div class="sub-about">
+                <h2>Exhibitions</h2>
+                <ul>
+                  <li><p>Vienna Design Week 2020 – <i>Journey to Recovery</i></p></li>
+                  <li><p>Refresh #3 2020– <i>Journey to Recovery</i></p></li>
+                  <li><p>ZHdK Highlights 2019 – <i>Moving Posters: Slot Machines / Cash lost in Em</i> </p></li>
+                  <li><p>Zauberwald 2018 – <i>Wind: Interactive Installation</i> </p></li>
+                </ul>
+              </div>
+              <div class="sub-about">
+                <h2>Awards</h2>
+                <ul>
+                  <li><p>Bachelor Award: Swiss Design Assciation (SDA) – <i>Journey to Recovery</i></p></li>
+                  <li><p>Förderpreis: ZHdK – <i>Journey to Recovery</i></p></li>
+                </ul>
+              </div>
+
+
+            </div>
+
             <section>
                 <h2>skills</h2>
                 <div id="used">
