--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <tr>
                     <td class="animated zoomIn" style="animation-delay:2.2s;"><a href="https://www.linkedin.com/in/randythechen" target="_blank" class="social"><i class="fab fa-linkedin"></i></a></td>
                     <td class="animated zoomIn" style="animation-delay:2.4s;"><a href="https://www.instagram.com/dechines/" target="_blank" class="social"><i class="fab fa-instagram"></i></a></td>
-                    <td class="animated zoomIn" style="animation-delay:2.6s;"><a href="mailto:randychen3@hotmail.com" target="_blank" class="social"><i class="fas fa-envelope"></i></a></td>
+                    <td class="animated zoomIn" style="animation-delay:2.6s;"><a href="mailto:randy_chen3@hotmail.com" target="_blank" class="social"><i class="fas fa-envelope"></i></a></td>
                     <!-- <td class="animated zoomIn" style="animation-delay:2.8s;"><a class="social"><i class="fab fa-dribbble"></i></a></td> -->
                 </tr>
         </table>
