--- a/en.html
+++ b/en.html
@@ -46,7 +46,7 @@
                 <tr>
                     <td class="animated zoomIn" style="animation-delay:2.2s;"><a href="https://www.linkedin.com/in/randythechen" target="_blank" class="social"><i class="fab fa-linkedin"></i></a></td>
                     <td class="animated zoomIn" style="animation-delay:2.4s;"><a href="https://www.instagram.com/dechines/" target="_blank" class="social"><i class="fab fa-instagram"></i></a></td>
-                    <td class="animated zoomIn" style="animation-delay:2.6s;"><a href="mailto:randychen3@hotmail.com" target="_blank" class="social"><i class="fas fa-envelope"></i></a></td>
+                    <td class="animated zoomIn" style="animation-delay:2.6s;"><a href="mailto:randy_chen3@hotmail.com" target="_blank" class="social"><i class="fas fa-envelope"></i></a></td>
                     <!-- <td class="animated zoomIn" style="animation-delay:2.8s;"><a class="social"><i class="fab fa-dribbble"></i></a></td> -->
                 </tr>
         </table>
@@ -131,6 +131,35 @@ Kiran Doshi, Franziska Eckert, Kira Erb, Lucien Erdin, Philipp Honegger, Frederi
                 <div><i class="fas fa-plus-circle"></i>&nbsp;HTML/CSS</div>
             </div>
         </section>
+        <section>
+            <h2>Zauberwald - Quellen der Energie</h2>
+            <h3>Team:</h3>
+            <p>
+            Lilian Lopez</p>
+            <h3>Description:</h3>
+
+            <p>Adero was created to autonomously deliver a wide range of goods in interiors, combining state-of-the-art technology with a simple but attractive design. Our title sponsor Jelmoli, the leading premium department store in Switzerland, will put our robot into operation at Zurich Airport in 2020/21. It will deliver goods ordered from the online store to predefined pickup points throughout the airport area, providing a unique customer experience. Adero actively interacts with its environment and strives to build relationships with the people it meets along the way. It captures the attention of the audience, both through sound and light, and transmits its current state using the same audiovisual means. When Adero arrives at its destination, it shows its trustworthy and friendly character, creating a novel but intuitive interaction experience.</p>
+
+              <h3>Press:</h3>
+              <p>
+              <a href="https://www.watson.ch/digital/schweiz/376240120-adero-studenten-der-eth-und-zhdk-enthuellen-lieferroboter-der-zukunft">watson.ch</a>/
+              <a href="https://www.tagesanzeiger.ch/zuerich/stadt/der-wippenden-kiste-fliegendie-herzen-zu/story/12439304">tagesanzeiger.ch</a>/
+              <a href="https://www.hochparterre.ch/nachrichten/design/blog/post/detail/niedlicher-butler/1566307568/">hochparterre.ch</a>/</p>
+            <h3>Links:</h3>
+            <p><a href="http://adero.ethz.ch">adero.ethz.ch</a></p>
+            <h3>Partner:</h3>
+            <p><a href="https://www.jelmoli.ch/jelmolis-digitale-transformation">EWZ</a></p>
+            <h3>Skills:</h3>
+            <div id="used">
+                <div><i class="fas fa-plus-circle"></i>&nbsp;UX Design</div>
+                <div><i class="fas fa-plus-circle"></i>&nbsp;Light Design</div>
+                <div><i class="fas fa-plus-circle"></i>&nbsp;Sound Design</div>
+                <div><i class="fas fa-plus-circle"></i>&nbsp;Product Design</div>
+                <div><i class="fas fa-plus-circle"></i>&nbsp;Arduino</div>
+                <div><i class="fas fa-plus-circle"></i>&nbsp;HTML/CSS</div>
+            </div>
+        </section>
+
         <section>
             <h2>...Work in progress - more projects to follow soon!</h2>
 
