--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 </head>
 <style>
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap');  /*firefox & Safari font fix*/
 </style>
 <body>
     <div id="loading">
