--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 </head>
 <style>
- @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap');  /*firefox & Safari font fix*/
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap');
 </style>
 <body>
     <div id="loading">
@@ -34,7 +34,7 @@
     <a id="work" onclick="showwork()" class="animated fadeIn" style="animation-delay:2.2s;">work</a>
     <a id="contact" onclick="showcontact()" class="animated fadeIn" style="animation-delay:2.2s;">contact</a>
     <div id="middle" class="animated slideInDown" style="animation-delay:2.0s;">
-        <h1 class="typewrite" style="letter-spacing:-0.8px" data-period="2000" data-type='[ "/atty", "/en", "/inese", "/arismatic", "/eeselover", "/allenger", "/arming", "/ocoholic", "/ampion", "/en"]'></h1>
+        <h1 class="typewrite" style="letter-spacing:-0.8px" data-period="2000" data-type='[ "/atty", "/en", "/inese", "/arismatic", "/eeselover", "/ill", "/allenger", "/arming", "/ocoholic", "/ampion", "/en", "/anger", "/eerfull", "/arged"]'></h1>
 
         <h2>Interaction Designer / Creative Thinker / Problem Solver</h2>
         <div id="menu">
@@ -55,7 +55,7 @@
         <div onclick="closework()" class="closeButton"><i class="fas fa-angle-right"></i></div>
         <h1>works</h1>
         <section class="project_1">
-         <div class="gallery"> <!--or with filtered -->
+         <div class="gallery"> <!-- onclick="showproject()" -->
             <img src="j2r.jpg" class="" alt="">
           </div>
           </section>
@@ -131,12 +131,50 @@ Kiran Doshi, Franziska Eckert, Kira Erb, Lucien Erdin, Philipp Honegger, Frederi
                 <div><i class="fas fa-plus-circle"></i>&nbsp;HTML/CSS</div>
             </div>
         </section>
+        <section class="project_2">
+         <div class="gallery"> <!--or with filtered -->
+            <img src="zauberwald.jpg" class="" alt="">
+          </div>
+          </section>
+        <section>
+            <h2>Zauberwald - Quellen der Energie</h2>
+            <h3>Team:</h3>
+            <p>
+            Lilian Lopez</p>
+            <h3>Description:</h3>
+
+            <p>For the exhibition "Zauberwald" in Lenzerheide we were able build an interactive light installation. We collaborated with EWZ with the goal to bring attention to the topic of sustainable energy and energy in Switzerland in general. Lilian and I focused on the Wind energy production and wanted to make the wind energy visible. Inspired by the location Lenzerheide we build a topological model and mapped the input, which was a blow, into a light sources. Visitors were able to see the amount of energy they produced with a single blow depending on the color, intensity and width of the light feedback. Additionally it was connected to a data visualisation projection that provided more information on energy consumption.</p>
+
+            <h3>Links:</h3>
+            <p><a href="https://interactiondesign.zhdk.ch/en/projects/zauberwald-lenzerheide/">interactiondesign.zhdk.ch/</a></p>
+            <p><a href="https://vimeo.com/325815678">video/</a></p>
+            <h3>Partner:</h3>
+            <p><a href="https://www.ewz.ch/">EWZ</a></p>
+            <h3>Skills:</h3>
+            <div id="used">
+                <div><i class="fas fa-plus-circle"></i>&nbsp;Java</div>
+                <div><i class="fas fa-plus-circle"></i>&nbsp;Digital Fabrication</div>
+                <div><i class="fas fa-plus-circle"></i>&nbsp;Electronics</div>
+                <div><i class="fas fa-plus-circle"></i>&nbsp;Rhino 3D</div>
+                <div><i class="fas fa-plus-circle"></i>&nbsp;Arduino</div>
+                <div><i class="fas fa-plus-circle"></i>&nbsp;3D Modelling</div>
+                <div><i class="fas fa-plus-circle"></i>&nbsp;Physical Computing</div>
+            </div>
+        </section>
+
         <section>
             <h2>...Work in progress - more projects to follow soon!</h2>
 
         </section>
 
     </div>
+
+<!-- <div id="project_container" class="container">
+  <div onclick="closeproject()" class="closeButton"><i class="fas fa-angle-right"></i></div>
+  TEST
+</div> -->
+
+
     <div id="about_container" class="container">
             <div onclick="closeabout()" class="closeButton"><i class="fas fa-angle-left"></i></div>
             <h1>about</h1>
@@ -160,7 +198,7 @@ Kiran Doshi, Franziska Eckert, Kira Erb, Lucien Erdin, Philipp Honegger, Frederi
                 <h2>Exhibitions</h2>
                 <ul>
                   <li><p>Vienna Design Week 2020 – <i>Journey to Recovery</i></p></li>
-                  <li><p>Refresh #3 2020– <i>Journey to Recovery</i></p></li>
+                  <li><p>Refresh #3 2020 – <i>Journey to Recovery</i></p></li>
                   <li><p>ZHdK Highlights 2019 – <i>Moving Posters: Slot Machines / Cash lost in Em</i> </p></li>
                   <li><p>Zauberwald 2018 – <i>Wind: Interactive Installation</i> </p></li>
                 </ul>
