--- a/en.html
+++ b/en.html
@@ -276,7 +276,7 @@ Kiran Doshi, Franziska Eckert, Kira Erb, Lucien Erdin, Philipp Honegger, Frederi
       <span class="flag">Interaction Design</span>
       <span class="time-wrapper"><span class="time">2017 - 2020</span></span>
     </div>
-    <div class="desc">Bachelor in Interacrion Design<br>
+    <div class="desc">Bachelor in Interaction Design<br>
       University of the Arts Zurich (ZHdK)</div>
   </div>
 </li>
