--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content"en.html">
+    <meta http-equiv="refresh" content"index.html">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>randy.ch/en</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
@@ -276,7 +276,7 @@ Kiran Doshi, Franziska Eckert, Kira Erb, Lucien Erdin, Philipp Honegger, Frederi
       <span class="flag">Interaction Design</span>
       <span class="time-wrapper"><span class="time">2017 - 2020</span></span>
     </div>
-    <div class="desc">Bachelor in Interacrion Design<br>
+    <div class="desc">Bachelor in Interaction Design<br>
       University of the Arts Zurich (ZHdK)</div>
   </div>
 </li>
