--- a/en.html
+++ b/en.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content"en.html">
+    <meta http-equiv="refresh" content"index.html">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>randy.ch/en</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
@@ -14,9 +14,6 @@
     <link rel="stylesheet" href="timeline.css">
 
 </head>
-<style>
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap');
-</style>
 <body>
     <div id="loading">
         <div id="spinner"></div>
